<resources>
    
    
    <string name="main_title">LabQuest2 iSENSE</string>
    <string name="request_session_name">Session Name:</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="connect">Connect to LabQuest\nUpload to iSENSE</string>
    <string name="labquest_status">LabQuest2 Status:</string>
    <string name="labquest_status_disconnect">Disconnected</string>
    <string name="labquest_status_connected">Data Received</string>
	<string name="labquest_settings">LabQuest2 Settings</string>
	<string name="labquest_ip">LabQuest2 IP Address:</string>
	<string name="labquest_manual_field_match_disabled">Manual Field Matching Disabled</string>
	<string name="labquest_manual_field_match_enabled">Manual Field Matching Enabled</string>
	<string name="labquest_field_matching">LabQuest Manual Field Matching</string>
    <string name="upload_to_isense">Upload to iSENSE</string>
    <string name="isense_status">iSENSE Status:</string>
    <string name="isense_status_not_logged_in">Not Logged In</string>
    <string name="isense_status_logged_in">Logged In</string>
    <string name="isense_status_logged_in_error">Invalid Username/Password</string>
    <string name="isense_settings">iSENSE Settings</string>
    <string name="isense_user">Username:</string>
    <string name="isense_pass">Password:</string>
    <string name="isense_expid">Experiment ID:</string>
    <string name="isense_dev_mode">Developer Mode:</string>

    <string name="error_no_session_name">Please Enter a Session Name!</string>
    
    
    <string name="save">Save</string>
 	<string name="cancel">Cancel</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="configure">Configure</string>
    
    <string name="scan_qr_code">Scan QR Code</string>
    
 	<string name="app_name">App_Name</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

</resources>